# audiocate

./: '  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  analyse.txt  audiocate.cabal  cabal.project  help.txt
.github/workflows/: haskell.yml
app/: Main.hs
csrc/: resources.c
docs/: architecture.md
gui/: AppState.hs  Main.hs  MainWindow.hs  compileResources.sh  resources.xml
gui/View/: DecodeView.hs  DecodeView.ui  EncodeView.hs  EncodeView.ui  LoadView.hs  LoadView.ui
lib/: Audiocate.hs
lib/Command/: Cmd.hs  DecodeCmd.hs  DecodeStreamCmd.hs  EncodeCmd.hs  EncodeStreamCmd.hs
lib/Data/Audio/: Stream.hs  Wave.hs
lib/Stego/: Common.hs
lib/Stego/Decode/: Decoder.hs  LSB.hs
lib/Stego/Encode/: Encoder.hs  LSB.hs
test/: DecodeCmdSpec.hs  DecodeSpec.hs  DecodeStreamCmdSpec.hs  EncodeCmdSpec.hs  EncodeSpec.hs  EncodeStreamCmdSpec.hs  RealTimeSpec.hs  Spec.hs  StegoSpec.hs
test-benchmark/: Benchmark.hs
test/analyse/: -verbose  analyseSpectrograms.sh  createSpectrograms.sh
test/output/: bench_results.csv
