cabal-version:      3.0
name:               audiocate
version:            0.1.0.0
synopsis:
    Audio encoding authentication library for verifying audio as being from a trusted source

-- A longer description of the package.
-- description:
homepage:           eldr-io.github.io

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             eldr.io
maintainer:         io.eldr@proton.me

-- A copyright notice.
-- copyright:
category:           Sound
extra-source-files:
    CHANGELOG.md
    README.md

library external
  hs-source-dirs: external
  exposed-modules: Data.OTP 
  build-depends: 
    base >=4.7 && <5 
    , time
    , bytestring
    , cryptohash-sha1 
    , cryptohash-sha256 
    , cryptohash-sha512 
  default-language: GHC2021

library
    exposed-modules:  Audiocate
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    -- Modules included in this library but not exported.
    other-modules:
      Data.Audio.Wave
      , Stego.Common
      , Stego.Encode.LSB
      , Stego.Encode.Encoder
      , Stego.Decode.LSB
      , Stego.Decode.Decoder

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base >=4.7 && <5 
      , external
      , HCodecs
      , array
      , bits-show
      , split
      , stm
      , mtl
      , bytestring
      , time
      , text
    hs-source-dirs:   lib
    default-language: GHC2021

executable audiocate
    main-is:          Main.hs
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.7 && <5 
        , audiocate

    hs-source-dirs:   app
    default-language: GHC2021

test-suite audiocate-test
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    ghc-options:
        -O -threaded -rtsopts -with-rtsopts=-N
    build-tool-depends:
      hspec-discover:hspec-discover
    build-depends:    
        base >=4.7 && <5 
      , hspec
      , hspec-discover
