cabal-version:      3.0
name:               audiocate
version:            0.1.0.0
synopsis:
    Audio encoding authentication library for verifying audio as being from a trusted source

-- A longer description of the package.
-- description:
homepage:           eldr-io.github.io

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             eldr.io
maintainer:         io.eldr@proton.me

-- A copyright notice.
-- copyright:
category:           Sound
extra-source-files:
    CHANGELOG.md
    README.md

executable audiocate-gui
  hs-source-dirs: gui
  main-is: Main.hs
  ghc-options: -Wall -fno-warn-unused-do-bind -threaded -with-rtsopts=-N
  build-depends: 
    base >=4.7 && <5 
    , audiocate
    , time
    -- , gi-glib == 2.0.*
    -- , gi-gtk == 4.0.*
    -- , gi-adwaita == 1.0.*
    -- , haskell-gi-base
    , gi-glib 
    , gi-gtk
    , gi-adwaita
    , haskell-gi-base
    , directory
  default-language: GHC2021

library
    exposed-modules:  Audiocate
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    -- Modules included in this library but not exported.
    other-modules:
      Data.Audio.Wave
      , Stego.Common
      , Stego.Encode.LSB
      , Stego.Encode.Encoder
      , Stego.Decode.LSB
      , Stego.Decode.Decoder
      , Command.Cmd
      , Command.DecodeCmd
      , Command.EncodeCmd

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base >=4.7 && <5 
      , HCodecs
      , array
      , bits-show
      , split
      , stm
      , mtl
      , bytestring
      , time
      , text
      , OTP >= 0.1.0.0
    hs-source-dirs:   lib
    default-language: GHC2021

executable audiocate
    main-is:          Main.hs
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base >=4.7 && <5 
        , audiocate
        , optparse-applicative

    hs-source-dirs:   app
    default-language: GHC2021

test-suite audiocate-test
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    ghc-options:
        -O -threaded -rtsopts -with-rtsopts=-N
    build-tool-depends:
      hspec-discover:hspec-discover
    build-depends:    
        base >=4.7 && <5 
      , hspec
      , hspec-discover
